k8s/polybot_deployment.yaml
# k8s/polybot_deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybotapp
  labels:
    app: polybotapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: polybotapp
  template:
    metadata:
        labels:
          app: polybotapp
    spec:
      containers:
      - name: polybot
        image: #TODO ECR URL
        ports:
        - containerPort: 8443
        livenessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/"
            port: 8443
        readinessProbe: #TODO
          initialDelaySeconds: 10
          httpGet:
            path: 
            port: 8443
        resources: #TODO Fill CPU&MEMORY
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 80m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: polybotapp-service
spec:
  selector:
    app: polybotapp
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
